url: "${MAESTRO_BASE_URL}/signin"
---
- launchApp:
    clearState: true
- waitForAnimationToEnd
- runFlow:
    when:
      visible: "Email"
    commands:
      - tapOn: "Email"
      - inputText: "${MAESTRO_TEST_EMAIL}"
      - tapOn: "Password"
      - inputText: "${MAESTRO_TEST_PASSWORD}"
      - tapOn:
          text: "Sign In"
          index: 1
- waitForAnimationToEnd
- assertVisible: "Dashboard"
- tapOn: "Requirements"
- waitForAnimationToEnd
- assertVisible: "Requirements"
- assertNotVisible: "Welcome back,"
- tapOn: "Planner"
- waitForAnimationToEnd
- assertVisible: "Planner"
- assertNotVisible: "Welcome back,"
- tapOn: "Dashboard"
- waitForAnimationToEnd
- assertVisible: "Dashboard"
